WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113142
REGRESSION (
r146588
): Cannot correctly display Chinese SNS Renren
https://bugs.webkit.org/show_bug.cgi?id=113142
Summary
REGRESSION (r146588): Cannot correctly display Chinese SNS Renren
aattyy
Reported
2013-03-23 18:51:44 PDT
The layout of the main content area is not right
Attachments
The nightly build screenshot.
(
deleted
)
2013-03-25 14:21 PDT
,
aattyy
no flags
Details
The correct layout.
(
deleted
)
2013-03-25 14:21 PDT
,
aattyy
no flags
Details
.webarchive of Safari and WebKit
(2.12 MB, application/zip)
2013-03-25 21:44 PDT
,
aattyy
no flags
Details
test reduction
(170 bytes, text/html)
2013-03-27 04:32 PDT
,
alan
no flags
Details
Patch
(3.92 KB, patch)
2013-03-27 06:32 PDT
,
Sergey Ryazanov
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-03-25 14:10:37 PDT
Could you please provide more information, such as a screenshot? I just tried opening <
http://www.renren.com
> in Safari 6.0.3 and in current build on OS X 10.8.3, and both looked good without any difference.
aattyy
Comment 2
2013-03-25 14:21:02 PDT
Created
attachment 194923
[details]
The nightly build screenshot. I have circled some area where the layout is wrong.
aattyy
Comment 3
2013-03-25 14:21:29 PDT
Created
attachment 194924
[details]
The correct layout.
aattyy
Comment 4
2013-03-25 14:26:19 PDT
These screenshots contains my personal information. I'd appreciate it if you could delete the above after you download them.
Alexey Proskuryakov
Comment 5
2013-03-25 17:28:09 PDT
<
rdar://problem/13501595
>
Mark Rowe (bdash)
Comment 6
2013-03-25 17:31:29 PDT
The content of
attachment 194923
[details]
has been deleted by Mark Rowe (bdash) <
mrowe@apple.com
> who provided the following reason: As requested by the uploader. The token used to delete this attachment was generated at 2013-03-25 17:31:19 PST.
Mark Rowe (bdash)
Comment 7
2013-03-25 17:31:40 PDT
The content of
attachment 194924
[details]
has been deleted by Mark Rowe (bdash) <
mrowe@apple.com
> who provided the following reason: As requested by the uploader. The token used to delete this attachment was generated at 2013-03-25 17:31:36 PST.
David Kilzer (:ddkilzer)
Comment 8
2013-03-25 21:30:53 PDT
A *.webarchive of the page with issues would likely be more useful than screenshots. Can you save a *.webarchive of the page and send it to Alexey or me?
aattyy
Comment 9
2013-03-25 21:44:27 PDT
Created
attachment 194996
[details]
.webarchive of Safari and WebKit Here it is.
johnthinrony
Comment 10
2013-03-26 02:35:50 PDT
In current build, the bug haven't fixed yet. :) I uploaded screenshots in another thread, not it seems unnecessary..
Alexey Proskuryakov
Comment 11
2013-03-26 08:35:34 PDT
That's
bug 111856
. I'm not sure if it's the same issue, or a different one.
johnthinrony
Comment 12
2013-03-26 10:13:17 PDT
That's right. These two threads point to the same issue on the renren.com ...for several days(3 or 5)... (In reply to
comment #11
)
> That's
bug 111856
. I'm not sure if it's the same issue, or a different one.
alan
Comment 13
2013-03-27 04:31:47 PDT
CSS parsing doesn't recover from broken syntax. after the following, broken, style declaration, div { ;*display:expression(function(){}) } the next valid style declaration does not get applied #foo { color: red; } see attached reduction case. Apparently the changes in CSSGrammar.y.in (
r146588
) causes this regression. bugzilla can't find
serya@chromium.org
(author) so assigned it to the reviewer of
r146588
alan
Comment 14
2013-03-27 04:32:10 PDT
Created
attachment 195270
[details]
test reduction
alan
Comment 15
2013-03-27 04:33:05 PDT
***
Bug 113388
has been marked as a duplicate of this bug. ***
Sergey Ryazanov
Comment 16
2013-03-27 05:41:13 PDT
This is a problem similar to
https://bugs.webkit.org/show_bug.cgi?id=112880
. Patch from this bug fixes this issue as well as a few more tests that fail on WebKit before
r146588
.
alan
Comment 17
2013-03-27 06:31:05 PDT
Thanks for the update. (In reply to
comment #16
)
> This is a problem similar to
https://bugs.webkit.org/show_bug.cgi?id=112880
. Patch from this bug fixes this issue as well as a few more tests that fail on WebKit before
r146588
.
Sergey Ryazanov
Comment 18
2013-03-27 06:32:29 PDT
Created
attachment 195301
[details]
Patch
johnthinrony
Comment 19
2013-03-27 12:58:11 PDT
Thank you for the update...but why can't I still get the correct layout? I was using 146499 which works properly... (In reply to
comment #18
)
> Created an attachment (id=195301) [details] > Patch
alan
Comment 20
2013-03-27 13:00:01 PDT
The patch hasnt been landed yet. (In reply to
comment #19
)
> Thank you for the update...but why can't I still get the correct layout? I was using 146499 which works properly... > > (In reply to
comment #18
) > > Created an attachment (id=195301) [details] [details] > > Patch
WebKit Review Bot
Comment 21
2013-03-27 17:09:55 PDT
Comment on
attachment 195301
[details]
Patch Clearing flags on attachment: 195301 Committed
r147028
: <
http://trac.webkit.org/changeset/147028
>
WebKit Review Bot
Comment 22
2013-03-27 17:10:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug