REGRESSION (r146588): Cannot correctly display Chinese SNS Renren https://bugs.webkit.org/show_bug.cgi?id=113142

Patch by Sergey Ryazanov <serya@chromium.org> on 2013-03-27
Reviewed by Pavel Feldman.

Source/WebCore:

Changed CSS grammar to be equivalent to pre-r146588.
CSS error reporting disabled to prevent message overflow.

* css/CSSGrammar.y.in:
* css/CSSParser.cpp:
(WebCore::CSSParser::isLoggingErrors):

LayoutTests:

* TestExpectations:
* fast/css/parsing-error-recovery.html:

git-svn-id: svn://svn.chromium.org/blink/trunk@147028 bbb929c8-8fbe-4397-9dbb-9b2b20218538